--- a/DevExpress.VideoRent.ViewModel/DevExpress.VideoRent.ViewModel.csproj
+++ b/DevExpress.VideoRent.ViewModel/DevExpress.VideoRent.ViewModel.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="12.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -7,7 +7,7 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{E2ACD1A2-B73F-466A-8282-101F846ED8FA}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DevExpress.VideoRent.ViewModel</RootNamespace>
     <AssemblyName>DevExpress.VideoRent.ViewModel</AssemblyName>
@@ -23,6 +23,7 @@
     <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -31,6 +32,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'DebugTest|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
@@ -41,6 +43,7 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisIgnoreBuiltInRuleSets>true</CodeAnalysisIgnoreBuiltInRuleSets>
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -50,6 +53,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>bin\x86\Release\</OutputPath>
@@ -59,6 +63,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'DebugTest|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -68,6 +73,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore">
@@ -85,29 +91,43 @@
     <Reference Include="System.Xml">
       <Private>False</Private>
     </Reference>
-    <Reference Include="DevExpress.Data.v13.1">
-      <HintPath>
-      </HintPath>
+    <Reference Include="DevExpress.Data.v21.2">
       <Private>False</Private>
     </Reference>
-    <Reference Include="DevExpress.Printing.v13.1.Core">
-      <HintPath>
-      </HintPath>
+    <Reference Include="DevExpress.Pdf.v21.2.Core">
       <Private>False</Private>
     </Reference>
-    <Reference Include="DevExpress.Utils.v13.1">
-      <HintPath>
-      </HintPath>
+    <Reference Include="DevExpress.Office.v21.2.Core">
       <Private>False</Private>
     </Reference>
-    <Reference Include="DevExpress.Xpo.v13.1">
-      <HintPath>
-      </HintPath>
+    <Reference Include="DevExpress.RichEdit.v21.2.Core">
       <Private>False</Private>
     </Reference>
-    <Reference Include="DevExpress.XtraReports.v13.1">
-      <HintPath>
-      </HintPath>
+    <Reference Include="DevExpress.RichEdit.v21.2.Export">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="DevExpress.Printing.v21.2.Core">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="DevExpress.Data.Desktop.v21.2">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="DevExpress.Utils.v21.2">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="DevExpress.Xpo.v21.2">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="DevExpress.Charts.v21.2.Core">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="DevExpress.XtraCharts.v21.2">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="DevExpress.CodeParser.v21.2">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="DevExpress.XtraReports.v21.2">
       <Private>False</Private>
     </Reference>
     <Reference Include="WindowsBase">
