--- a/DevExpress.VideoRent.Wpf/DevExpress.VideoRent.Wpf.csproj
+++ b/DevExpress.VideoRent.Wpf/DevExpress.VideoRent.Wpf.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DevExpress.VideoRent.Wpf</RootNamespace>
     <AssemblyName>DevExpress.VideoRent.Wpf</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -29,6 +29,7 @@
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -39,6 +40,7 @@
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'DebugTest|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,6 +52,7 @@
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>DevExpress.VideoRent.Wpf.Program</StartupObject>
@@ -66,6 +69,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>bin\x86\Release\</OutputPath>
@@ -76,6 +80,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'DebugTest|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -86,97 +91,87 @@
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Accessibility" />
-    <Reference Include="DevExpress.Charts.v13.1.Core">
-      <HintPath>
-      </HintPath>
-      <Private>False</Private>
+    <Reference Include="DevExpress.Charts.v21.2.Core">
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DevExpress.Data.v13.1">
-      <HintPath>
-      </HintPath>
-      <Private>False</Private>
+    <Reference Include="DevExpress.Data.v21.2">
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DevExpress.Printing.v13.1.Core">
-      <HintPath>
-      </HintPath>
-      <Private>False</Private>
+    <Reference Include="DevExpress.Pdf.v21.2.Core">
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DevExpress.Utils.v13.1">
-      <HintPath>
-      </HintPath>
-      <Private>False</Private>
+    <Reference Include="DevExpress.Office.v21.2.Core">
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DevExpress.Xpf.Carousel.v13.1">
-      <HintPath>
-      </HintPath>
-      <Private>False</Private>
+    <Reference Include="DevExpress.RichEdit.v21.2.Core">
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DevExpress.Xpf.Charts.v13.1">
-      <HintPath>
-      </HintPath>
-      <Private>False</Private>
+    <Reference Include="DevExpress.RichEdit.v21.2.Export">
+      <Private>True</Private>
     </Reference>
-    <Reference Include="devexpress.xpf.controls.v13.1, Version=13.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
-    <Reference Include="DevExpress.Xpf.Core.v13.1">
-      <HintPath>
-      </HintPath>
-      <Private>False</Private>
+    <Reference Include="DevExpress.Printing.v21.2.Core">
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DevExpress.Xpf.Docking.v13.1">
-      <HintPath>
-      </HintPath>
-      <Private>False</Private>
+    <Reference Include="DevExpress.Utils.v21.2">
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DevExpress.Xpf.Grid.v13.1.Core">
-      <HintPath>
-      </HintPath>
-      <Private>False</Private>
+    <Reference Include="DevExpress.Xpf.Carousel.v21.2">
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DevExpress.Xpf.Grid.v13.1">
-      <HintPath>
-      </HintPath>
-      <Private>False</Private>
+    <Reference Include="DevExpress.Xpf.Charts.v21.2">
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DevExpress.Xpf.Layout.v13.1.Core">
-      <HintPath>
-      </HintPath>
-      <Private>False</Private>
+    <Reference Include="devexpress.xpf.controls.v21.2, Version=21.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Xpf.CodeView.v21.2">
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DevExpress.Xpf.LayoutControl.v13.1">
-      <HintPath>
-      </HintPath>
-      <Private>False</Private>
+    <Reference Include="DevExpress.Data.Desktop.v21.2">
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DevExpress.Xpf.Mvvm.v13.1, Version=13.1.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
-    <Reference Include="DevExpress.Xpf.NavBar.v13.1">
-      <HintPath>
-      </HintPath>
-      <Private>False</Private>
+    <Reference Include="DevExpress.Xpf.Core.v21.2">
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DevExpress.Xpf.Printing.v13.1">
-      <HintPath>
-      </HintPath>
-      <Private>False</Private>
+    <Reference Include="DevExpress.Xpf.Docking.v21.2">
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DevExpress.Xpf.Ribbon.v13.1">
-      <HintPath>
-      </HintPath>
-      <Private>False</Private>
+    <Reference Include="DevExpress.Xpf.Grid.v21.2.Core">
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DevExpress.Xpo.v13.1">
-      <HintPath>
-      </HintPath>
-      <Private>False</Private>
+    <Reference Include="DevExpress.Xpf.Grid.v21.2">
+      <Private>True</Private>
     </Reference>
-    <Reference Include="DevExpress.XtraReports.v13.1">
-      <HintPath>
-      </HintPath>
-      <Private>False</Private>
+    <Reference Include="DevExpress.Xpf.Layout.v21.2.Core">
+      <Private>True</Private>
     </Reference>
-    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Xpf.LayoutControl.v21.2">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DevExpress.Mvvm.v21.2, Version=21.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Xpf.NavBar.v21.2">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DevExpress.Xpf.Printing.v21.2">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DevExpress.Xpf.Ribbon.v21.2">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DevExpress.Xpo.v21.2">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DevExpress.XtraCharts.v21.2">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DevExpress.CodeParser.v21.2">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DevExpress.XtraReports.v21.2">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="PresentationUI, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="ReachFramework" />
     <Reference Include="System">
@@ -220,11 +215,6 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="PresentationFramework">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>
-      </HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
@@ -535,6 +525,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Themes\Generic.xaml">
+      <SubType>Designer</SubType>
+      <Generator>XamlIntelliSenseFileGenerator</Generator>
+    </Page>
     <Page Include="Windows\ApplyingThemeSplashScreenWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -663,10 +657,6 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Themes\Generic.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Themes\Helpers\PicturesGallery.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -781,6 +771,11 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Office2013.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MySql.Data">
+      <Version>8.0.32</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
